height of panels is automatically set

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -361,7 +361,7 @@ hr {
 
 	&__panel {
 		position: relative;
-		height: $apps_panel_height;
+		// height: $apps_panel_height;
 		padding: 5rem 4rem;
 		overflow: hidden;
 	}
