--- a/scss/main.scss
+++ b/scss/main.scss
@@ -493,7 +493,7 @@ hr {
 		position: relative;
 		align-self: center;
 		width: 20px;
-		height: 30px;
+		// height: 30px;
 		margin-top: 3rem;
 		// background-image: url('/img/arrowd30_47.png');
 		// background-position: center;
