--- a/css/main.css
+++ b/css/main.css
@@ -428,15 +428,12 @@ hr {
   margin-top: 1rem;
   list-style-type: none;
 }
-.apps__page-one-arrow-img {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+.apps__page-one-arrow {
   position: relative;
   -ms-flex-item-align: center;
       align-self: center;
-  width: 20px;
   margin-top: 3rem;
+  font-size: 3rem;
 }
 .apps__description-right {
   position: relative;
