--- a/scss/main.scss
+++ b/scss/main.scss
@@ -415,17 +415,19 @@ hr {
 		position: relative;
 		height: 220px;
 		margin-bottom: 2rem;
-		// background-position: center;
-		// background-size: cover;
+		background-position: center;
+		background-size: cover;
 
 		// &--app-one {
 		// 	background-image: url('/img/AMB_120a.png');	
 		// }
-		// &--app-two {
-		// 	background-image: url('/img/Ikona_ambus.png');	
+		&--app-two {
+			// height: 40px;
+			background-color: yellow;
+			// background-image: url('/img/ambus320.png');	
 		// }
-		// &--app-three {
-		// 	background-image: url('/img/saferoad320.png');	
+		&--app-three {
+			background-image: url('/img/saferoad320.png');	
 		}
 		&--app-four {
 			// background-image: url('/img/bryly320.png');	
@@ -436,7 +438,7 @@ hr {
 			// background-image: url('/img/IkonaUE_114.png');
 			margin-top: 0;
 		}
-	
+	}
 	// &__page-one-img {
 	// 	position: relative;
 	// 	height: 220px;
