--- a/css/main.css
+++ b/css/main.css
@@ -403,16 +403,22 @@ hr {
   background-position: center;
   background-size: cover;
 }
+.apps__page-one-img--app-one {
+  background-image: url("/img/AMB_120a.png");
+}
 .apps__page-one-img--app-two {
-  background-color: yellow;
+  background-image: url("/img/ambus320.png");
+}
+.apps__page-one-img--app-three {
   background-image: url("/img/saferoad320.png");
 }
 .apps__page-one-img--app-four {
+  background-image: url("/img/bryly114.jpg");
   height: 240px;
   margin-bottom: 0;
 }
 .apps__page-one-img--app-five {
-  margin-top: 0;
+  background-image: url("/img/IkonaUE_114.png");
 }
 .apps__page-two {
   position: absolute;
