--- a/scss/main.scss
+++ b/scss/main.scss
@@ -54,8 +54,6 @@ body {
 	}
 
 	&__btn {
-		// width: 100px;
-		// height: 50px;
 		padding: 1.5rem 2.1rem;
 		margin-top: 3rem;
 		font-size: 2rem;
@@ -69,9 +67,7 @@ body {
 
 	}
 	&__btn:hover {
-		// background-color: rgb(244, 101, 6);
 		box-shadow: 2px 2px 4px rgb(5, 5, 5);
-
 		padding: 1.5rem 2rem;
 	}
 }
@@ -108,8 +104,8 @@ body {
 
 	&__box {
 		position: relative;
-		width: 40px;
-		height: 30px;
+		width: 30px;
+		height: 20px;
 	}
 
 	&__bars,
@@ -127,11 +123,11 @@ body {
 	&__bars {
 		width: 100%;
 		&::after {
-			top: 13px;
+			top: 10px;
 			width: 60%;
 		}
 		&::before {
-			top: 27px;
+			top: 20px;
 			width: 30%;
 			transition: width 0.3s 0.1s;
 		}
@@ -344,6 +340,7 @@ body {
 		margin: 10px 10px;
 		// padding: 10px;
 		box-shadow: 3px 5px 10px black;
+		background-color: white;
 		font-size: 2rem;
 		&--img {
 			position: relative;
@@ -356,34 +353,21 @@ body {
 
 		&--name-one {
 			text-align: center;
-			margin: 30px auto 20px;
+			margin: 40px auto 10px;
+		}
+	}
+
+	&__cards-additional-background {
+		position: relative;
+		left: 50%;
+		top: 20px;
+		transform: translate(-50%);
+		width: 90%;
+		aspect-ratio: calc(0.6);
+		img {
+			aspect-ratio: calc(1);
 		}
 
-		&--one {
-			background-color: white;
-		}
-		&--two {
-			background-color: white;
-		}
-		&--three {
-			background-color: white;
-		}
-		&--four {
-			background-color: white;
-		}
-		&--five {
-			background-color: white;
-		}
-		&--six {
-			background-color: white;
-		}
-		&--seven {
-			position: relative;
-			background-color: white;
-			img {
-				aspect-ratio: calc(1);
-			}
-		}
 	}
 }
 
