--- a/scss/main.scss
+++ b/scss/main.scss
@@ -524,32 +524,6 @@ hr {
 			background-image: url('../img/IkonaUE_114.png');
 		}
 	}
-	// &__page-one-img {
-	// 	position: relative;
-	// 	height: 220px;
-	// 	margin-bottom: 2rem;
-	// 	background-position: center;
-	// 	background-size: cover;
-
-	// 	&--app-one {
-	// 		background-image: url('/img/AMB_120a.png');
-	// 	}
-	// 	&--app-two {
-	// 		background-image: url('/img/Ikona_ambus.png');
-	// 	}
-	// 	&--app-three {
-	// 		background-image: url('/img/saferoad320.png');
-	// 	}
-	// 	&--app-four {
-	// 		background-image: url('/img/bryly320.png');
-	// 		height: 240px;
-	// 		margin-bottom: 0;
-	// 	}
-	// 	&--app-five {
-	// 		background-image: url('/img/IkonaUE_114.png');
-	// 		margin-top: 0;
-	// 	}
-	// }
 
 	&__page-two {
 		position: absolute;
@@ -575,27 +549,16 @@ hr {
 	}
 
 	&__page-one-arrow {
-		// display: flex;
-		// display: inline-block;
 		color: black;
 		position: relative;
 		align-self: center;
 		margin-top: 3rem;
 		font-size: 3rem;
-		// font-weight: 300;
-		// background-image: url('/img/arrowd30_47.png');
-		// background-position: center;
-		// background-size: cover;
-		// align-items: center;
+		animation: moveArrow 5s infinite;
+		transform: rotateZ(-30deg);
 	}
+	
 
-	// &__page-three {
-	// 	position: absolute;
-	// 	width: 100%;
-	// 	height: 100%;
-	// 	background-color: transparent;
-	// 	z-index: 5;
-	// }
 
 	&__description-right {
 		position: relative;
@@ -604,204 +567,6 @@ hr {
 		z-index: 0;
 	}
 }
-
-// Stara wersja
-
-// &__app-all {
-// 	padding: 5rem 1rem;
-// 	overflow: hidden;
-// }
-
-// &__app-one {
-// 	// background-color: #fcfdf8;
-// }
-
-// &__app-two {
-// 	background-color: $app_color;
-// }
-
-// &__app-four {
-// 	background-color: $app_color;
-// }
-
-// &__card {
-// 	position: relative;
-// 	width: 240px;
-// 	height: 520px;
-// 	padding: 2rem;
-// 	float: left;
-// 	margin-right: 5rem;
-// 	box-shadow: 3px 3px 10px grey;
-// 	background-color: white;
-// 	// z-index: 10;
-// 	// opacity: 0;
-// }
-
-// .underline-long {
-// 	margin: 2rem auto ;
-// 	// right: 0;
-// 	width: 200px;
-// 	margin-right: 30rem;
-// }
-
-// &__card-one {
-// 	// position: relative;
-// 	// float: left;
-// 	// margin-right: 5rem;
-// }
-
-// &__cards {
-// 	display: flex;
-// 	// position: relative;
-// 	flex-wrap: wrap;
-// 	// justify-content: space-between;
-// 	padding: 0 1rem;
-// }
-
-// &__cards:nth-child(even) {
-// 	background-color: red;
-// }
-
-// &__cards-img {
-// 	// position: relative;
-// 	// left: 0;
-// 	// right: 0;
-// 	// width: 100%;
-// 	height: 50%;
-// 	// margin-bottom: 2rem;
-
-// 	background-position: center;
-// 	background-size: cover;
-// 	&--one {
-// 		background-image: url('../img/AMB_120a.png');
-
-// 	}
-// 	&--two {
-// 		background-image: url('../img/Ikona_ambus.png');
-
-// 	}
-// 	&--three {
-// 		background-image: url('../img/SafeRoad_114.png');
-
-// 	}
-// }
-
-// &__cards-title {
-// 	// position: absolute;
-// 	border-top-right-radius: 0;
-// 	padding: 1rem;
-// 	// height: 50%;
-// 	margin-top: 19rem;
-// 	text-align: center;
-
-// }
-
-// &__cards-page-one {
-// 	display: flex;
-// 	flex-direction: column;
-// 	// color: red;
-// 	// position: absolute;
-// 	// top: 0;
-// 	// left: 0;
-// 	width: 200px;
-// 	height: 500px;
-// 	// margin-top: 8rem;
-// 	background-color: white;
-// 	transition: transform 0.8s;
-// 	// align-items: center;
-// 	// z-index: 60;
-// }
-
-// &__cards-page-two {
-// 	position: absolute;
-// 	top: 0;
-// 	left: 50%;
-// 	transform: translate(-50%);
-// 	padding: 2rem;
-// 	opacity: 0;
-// 	transition: opacity .8s;
-// 	background-color: white;
-// 	// z-index: -1;
-
-// }
-
-// &__cards-text {
-// 	position: relative;
-// 	width: 200px;
-// 	height: 460px;
-// 	padding: 0 1rem;
-// 	// position: relative;
-// 	// align-items: center;
-// 	// font-size: 1.2rem;
-// 	// background: transparent;
-// 	p {
-// 		text-align: center;
-// 		margin-bottom: 1rem;
-// 		font-weight: bold;
-// 		font-size: 2rem;
-// 	}
-// 	ul {
-// 		// background: transparent;
-// 		list-style-type: none;
-// 		text-align: left;
-// 		margin-top: 2rem;
-
-// 		li {
-// 			margin-bottom: 1rem;
-// 		}
-// 		// align-items: center;
-// 	}
-// }
-
-// &__cards-info {
-// 	// width: 100%;
-// 	height: 100%;
-// 	resize: none;
-// 	border: none;
-// 	color: black;
-// 	font-size: 1.4rem;
-// }
-
-// &__card-one:hover &__cards-page-one {
-// 	transform: translateY($card_page_two_delta);
-// }
-// &__card-one: &__cards-page-one {
-// 	transform: translateY($card_page_two_delta);
-// } mouse out
-
-// &__card-one:hover &__cards-text {
-// 	opacity: 1;
-// }
-// &__card-one:hover &__cards-page-two {
-// 	opacity: 1;
-// }
-
-// &__card-two:hover &__cards-page-one {
-// 	transform: translateY($card_page_two_delta);
-// }
-// &__card-two:hover &__cards-page-two {
-// 	opacity: 1;
-// }
-
-// &__card-three:hover &__cards-page-one {
-// 	transform: translateY($card_page_two_delta);
-// }
-// &__card-three:hover &__cards-page-two {
-// 	opacity: 1;
-// }
-
-// &__card-four:hover &__cards-page-one {
-// 	transform: translateY($card_page_two_delta);
-// }
-// &__card-four:hover &__cards-page-two {
-// 	opacity: 1;
-// }
-// &__card-five:hover &__cards-page-one {
-// 	transform: translateY($card_page_two_delta);
-// }
-// &__card-five:hover &__cards-page-two {
-// 	opacity: 1;
-// }
 
 .footer {
 	position: relative;
