--- a/scss/main.scss
+++ b/scss/main.scss
@@ -38,7 +38,7 @@ body {
 	position: absolute;
 	width: 100%;
 	// height: 300px;
-	padding: 2rem;
+	padding: 1rem;
 	transform: translateY(-105%);
 	transition: transform 2s;
 	background-color: yellow;
@@ -46,17 +46,17 @@ body {
 	opacity: 1;
 	z-index: 20;
 	text-align: center;
-	font-size: 3rem;
+	font-size: 2rem;
 	font-weight: bold;
 
 	&__web {
-		font-size: 4rem;
+		font-size: 3rem;
 	}
 
 	&__btn {
-		padding: 1.5rem 2.1rem;
-		margin-top: 3rem;
-		font-size: 2rem;
+		padding: .5rem 1.1rem;
+		margin-top: 2rem;
+		font-size: 1.6rem;
 		border-radius: 8px;
 		cursor: pointer;
 		background-color: rgb(246, 246, 108);
@@ -73,7 +73,7 @@ body {
 }
 
 .box-active {
-	transform: translateY(0);
+	transform: translateY(90px);
 }
 
 
@@ -581,7 +581,31 @@ hr {
 // MEDIA
 // ========================
 
+
+@media (min-width: 576px) {
+	.remake-box {
+		padding: 2rem;
+		font-size: 3rem;
+		font-weight: bold;
+		&__web {
+			font-size: 4rem;
+		}
+		&__btn {
+			padding: 1.5rem 2.1rem;
+			margin-top: 3rem;
+			font-size: 2rem;
+			border-radius: 8px;
+		}
+	}
+}
+
+
 @media (min-width: 768px) {
+
+	.box-active {
+		transform: translateY(0);
+	}
+
 	.header {
 		&__hero-img {
 			padding-left: 0;
