--- a/scss/main.scss
+++ b/scss/main.scss
@@ -35,7 +35,7 @@ body {
 }
 
 .remake-box {
-	position: absolute;
+	position: fixed;
 	width: 100%;
 	// height: 300px;
 	padding: 1rem;
@@ -322,7 +322,7 @@ body {
 	width: 100%;
 	//  height: 100vh;
 	// background-color: rgb(231, 231, 231);
-	padding: 4rem 4rem 10rem;
+	padding: 4rem 4rem 4rem;
 
 	h2 {
 		@include panelNameSettings();
@@ -355,6 +355,8 @@ body {
 			text-align: center;
 			margin: 40px auto 10px;
 		}
+
+
 	}
 
 	&__cards-additional-background {
@@ -368,6 +370,14 @@ body {
 			aspect-ratio: calc(1);
 		}
 
+	}
+
+	&__links {
+		display: block;
+		margin: 3rem auto 0;
+		text-align: center;
+		font-size: 2rem;
+		text-decoration: none;
 	}
 }
 
